@@ -5,6 +5,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.2.2 - not yet released
 * devices
   - save the "bulk baud rate" setting
+  - don't auto-restart NMEAOut and XCOM760
 * calculations
   - fix instant L/D formula
   - fix malformed F records in IGC files
